<resources>
    <string name="transition_string">hello</string>

    <string name="app_name">Movies</string>
    <string name="home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">The password must have a minimum of 6 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="movies">Movies</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="signIn">Sing in</string>
    <string name="rememberMe">Remember me</string>
    <string name="billboard">Billboard</string>
    <string name="popular">Popular</string>
    <string name="topRated">Top rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="d_movieLoadingFailed">There was an error loading the movie.</string>
    <string name="d_moviesLoadingFailed">There was an error loading the movies.</string>
    <string name="searchMovie">Search movie</string>
    <string name="d_favoriteMoviesEmpty">You haven\'t added any movies to favorites yet.</string>
    <string name="d_addFavorite">Has been added to favorites:</string>
    <string name="d_removeFavorite">Has been removed from favorites:</string>
    <string name="undo">Undo</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="d_loginDataIsIncorrect">Login data is incorrect.</string>
    <string name="d_emptyEmail">Empty email.</string>
    <string name="d_emptyPassword">Empty password.</string>
    <string name="d_emptyUsername">Empty username.</string>
    <string name="d_userAlreadyRegistered">User already registered.</string>
    <string name="registrationDate">Registration Date</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="d_logout">Are you sure to log out?</string>
    <string name="movieTitle">Movie title</string>
    <string name="movieGenres">Movie genres</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac condimentum nisi, ac consequat purus. Quisque porta laoreet neque, vitae dapibus risus vestibulum id. Curabitur nec neque at metus dapibus consectetur. Pellentesque vel massa malesuada, egestas nulla vel, auctor velit. Curabitur dignissim rhoncus risus, nec ultrices velit suscipit ac. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce sed odio vitae diam iaculis rutrum.</string>
    <string name="details">Details</string>
    <string name="d_movieCreditsLoadingFailed">There was an error loading the movie credits.</string>
    <string name="character">Character</string>
    <string name="name">Name</string>
    <string name="d_noMoviesFound">No movies found.</string>
    <string name="d_searchMovie">Enter the name of the movie you are looking for.</string>

</resources>
