<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:transitionName="@string/transition_string">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_string">

        <ImageView
            android:id="@+id/movie_imgCover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:srcCompat="@android:color/darker_gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/movie_btnFavorite"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            app:icon="@drawable/ic_star_border_black_24dp"
            app:iconTint="#ffffff" />

        <TextView
            android:id="@+id/movie_txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_imgCover"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/movieTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/movie_txtGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_txtTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/movieGenres"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorSecondaryTextDefaultMaterialLight" />

        <ImageButton
            android:id="@+id/movie_btnExpand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_imgCover"
            android:layout_alignBottom="@+id/movie_txtGenres"
            android:layout_alignParentEnd="true"
            android:background="#00FFFFFF"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />

        <TextView
            android:id="@+id/movie_txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_txtGenres"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lorem" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>