<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:transitionName="@string/transition_string">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_string">

            <ImageView
                android:id="@+id/contMovie_imgCover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:srcCompat="@android:color/darker_gray" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/contMovie_btnFavorite"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                app:icon="@drawable/ic_star_border_black_24dp"
                app:iconTint="#ffffff" />

            <!--            <FrameLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="200dp">-->

            <!--                <com.google.android.material.button.MaterialButton-->
            <!--                    android:id="@+id/contMovie_btnPlay"-->
            <!--                    style="@style/Widget.MaterialComponents.Button.TextButton"-->
            <!--                    android:layout_width="56dp"-->
            <!--                    android:gravity="center"-->
            <!--                    android:layout_gravity="center"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginEnd="5dp"-->
            <!--                    app:icon="@drawable/ic_play_arrow_black_24dp"-->
            <!--                    app:iconTint="#303030" />-->

            <!--            </FrameLayout>-->

            <TextView
                android:id="@+id/contMovie_txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contMovie_imgCover"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/movieTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/contMovie_txtGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contMovie_txtTitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/movieGenres"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorSecondaryTextDefaultMaterialLight" />

            <TextView
                android:id="@+id/contMovie_txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contMovie_txtGenres"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/lorem" />

<!--            <FrameLayout-->
            <!--                android:id="@+id/contMovie_flRating"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_below="@id/contMovie_txtDescription">-->

            <!--                <RatingBar-->
            <!--                    android:id="@+id/contMovie_rating"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_gravity="center"-->
            <!--                    android:numStars="5" />-->

            <!--            </FrameLayout>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contMovie_rvCastPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contMovie_txtDescription"
                android:layout_margin="10dp"
                android:orientation="vertical" />


        </RelativeLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>