<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <!-- LOGIN -->
    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="36sp" />

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login" />
    </LinearLayout>

    <!-- Sign open -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn_btnOpen"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/signIn" />

    <!-- Login open -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btnOpen"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        android:visibility="gone" />

    <!-- SIGN IN -->
    <LinearLayout
        android:id="@+id/signIn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signIn"
            android:textSize="36sp" />

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signIn_txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signIn_txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signIn_txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn_btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signIn" />

    </LinearLayout>

    <!-- PROFILE -->
    <RelativeLayout
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <!-- Banner -->
        <ImageView
            android:id="@+id/profile_ivBanner"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <!-- User photo -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_ivPhoto"
            android:layout_width="180dp"
            android:layout_height="162dp"
            android:layout_below="@+id/profile_ivBanner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-91dp"
            android:clickable="true"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="3dp"
            tools:srcCompat="@tools:sample/avatars" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_ivBanner"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <!-- Username -->
            <TextView
                android:id="@+id/profile_txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/username"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Email -->
            <TextView
                android:id="@+id/profile_txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_txtUsername"
                android:layout_centerHorizontal="true"
                android:text="@string/email"
                android:textSize="18sp" />

            <!-- Registration date -->
            <TextView
                android:id="@+id/profile_txtRegistrationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_txtEmail"
                android:layout_centerHorizontal="true"
                android:text="@string/registrationDate"
                android:textSize="12sp" />

            <!-- Logout -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_txtRegistrationDate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/logout"
                android:textSize="18sp" />
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>